Replace JDT's ClassFileConstants.Acc* by JDK's Flags